--- a/HTML3.htm
+++ b/HTML3.htm
@@ -6,8 +6,9 @@ Demo
 </title>
 </head>
 <body>
-<h1>Training:01</h1>
-<p>Inplementation 01</p>
-<a href="https://www.w3schools.com/html/html_basic.asp">This is the first page.</a>
+<h1 style="font-size:80px;">Training:01</h1>
+<p style="color:purple; font-size:30px">Inplementation 01</p>
+<a href="https://www.w3schools.com/html/html_basic.asp">This is the first page.</a><br><br>
+<img src="/home/dell/Documents/62df78966e711.jpg" alt="nature" width="200px" height="100">
 </body>
 </html>
