--- a/HTML3.htm
+++ b/HTML3.htm
@@ -5,10 +5,14 @@
 Demo
 </title>
 </head>
-<body>
+<body style="background-color:yellow">
 <h1 style="font-size:80px;">Training:01</h1>
 <p style="color:purple; font-size:30px">Inplementation 01</p>
-<a href="https://www.w3schools.com/html/html_basic.asp">This is the first page.</a><br><br>
-<img src="/home/dell/Documents/62df78966e711.jpg" alt="nature" width="200px" height="100">
+<a href="https://www.w3schools.com/html/html_basic.asp" target="_blank">This is the first page.</a><br><br>
+<p>Click image for more landscapes</p>
+<a href="https://unsplash.com/s/photos/landscapes">
+<img src="/home/dell/Documents/62df78966e711.jpg" alt="nature" width="900px" height="500">
+</a>
+<cite>The Sunset</cite><!--title of the image-->
 </body>
 </html>
