--- a/HTML3.htm
+++ b/HTML3.htm
@@ -19,6 +19,13 @@ a:hover, a:active {
  background-color:green;
 }
 
+body{
+  background-image: url('/home/dell/Downloads/blue-abstract-gradient-wave-wallpaper.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+
 </style>
 </head>
 <body style="background-color:yellow">
