--- a/HTML3.htm
+++ b/HTML3.htm
@@ -26,6 +26,7 @@ body{
   background-size: cover;
 }
 
+
 </style>
 </head>
 <body style="background-color:yellow">
@@ -39,14 +40,14 @@ body{
 </a><br>
 <cite>The Sunset</cite><!--title of the image--><br><br>
 <h4 id="text">Landscapes:</h4>
-<pre>A landscape is part of the Earths surface that can be viewed at one time from one place. It consists of the geographic features that mark, or are characteristic of, a particular area.
+<div>A landscape is part of the Earths surface that can be viewed at one time from one place. It consists of the geographic features that mark, or are characteristic of, a particular area.</div><br>
 
-The term comes from the Dutch word landschap, the name given to paintings of the countryside. Geographers have borrowed the word from artists. Although landscape paintings have existed since ancient Roman times (landscape frescoes are present in the ruins of Pompeii), they were reborn during the Renaissance in Northern Europe. Painters ignored people or scenes in landscape art, and made the land itself the subject of paintings. Famous Dutch landscape painters include Jacob van Ruisdael and Vincent van Gogh.
+<div>The term comes from the Dutch word landschap, the name given to paintings of the countryside. Geographers have borrowed the word from artists. Although landscape paintings have existed since ancient Roman times (landscape frescoes are present in the ruins of Pompeii), they were reborn during the Renaissance in Northern Europe. Painters ignored people or scenes in landscape art, and made the land itself the subject of paintings. Famous Dutch landscape painters include Jacob van Ruisdael and Vincent van Gogh.</div><br>
 
-An artist paints a landscape; a geographer studies it. Some geographers, such as Otto Schluter, actually define geography as landscape science. Schluter was the first scientist to write specifically of natural landscapes and cultural landscapes.
+<div>An artist paints a landscape; a geographer studies it. Some geographers, such as Otto Schluter, actually define geography as landscape science. Schluter was the first scientist to write specifically of natural landscapes and cultural landscapes.</div><br>
 
-A natural landscape is made up of a collection of landforms, such as mountains, hills, plains, and plateaus. Lakes, streams, soils (such as sand or clay), and natural vegetation are other features of natural landscapes. A desert landscape, for instance, usually indicates sandy soil and few deciduous trees. Even desert landscapes can vary: The hilly sand dunes of the Sahara Desert landscape are very different from the cactus-dotted landscape of the Mojave Desert of the American Southwest, for instance.
-</pre><br><br> 
+<div>A natural landscape is made up of a collection of landforms, such as mountains, hills, plains, and plateaus. Lakes, streams, soils (such as sand or clay), and natural vegetation are other features of natural landscapes. A desert landscape, for instance, usually indicates sandy soil and few deciduous trees. Even desert landscapes can vary: The hilly sand dunes of the Sahara Desert landscape are very different from the cactus-dotted landscape of the Mojave Desert of the American Southwest, for instance.
+</div><br><br> 
 <button onclick="document.location='https://en.wikipedia.org/wiki/Landscape#:~:text=A%20landscape%20is%20the%20visible,terms%20of%20their%20aesthetic%20appeal.'">Landscapes</button>
 </body>
 </html>
