--- a/HTML5.htm
+++ b/HTML5.htm
@@ -14,7 +14,7 @@
 }
 
 .menu a {
-  background-color: #e5e5e5;
+  background-color: cyan;
   padding: 8px;
   margin-top: 7px;
   display: block;
@@ -29,7 +29,7 @@
 }
 
 .right {
-  background-color: #e5e5e5;
+  background-color: cyan;
   float: left;
   width: 20%;
   padding: 15px;
@@ -37,40 +37,39 @@
   text-align: center;
 }
 
-@media only screen and (max-width: 620px) {
-  /* For mobile phones: */
+@media only screen and (max-width: 600px) {
   .menu, .main, .right {
     width: 100%;
   }
 }
 </style>
 </head>
-<body style="font-family:Verdana;color:#aaaaaa;">
+<body style="font-family:Ariel;color:grey;">
 
-<div style="background-color:#e5e5e5;padding:15px;text-align:center;">
-  <h1>Hello World</h1>
+<div style="background-color:blue;padding:15px;text-align:center;">
+  <h1>Dashboard</h1>
 </div>
 
 <div style="overflow:auto">
   <div class="menu">
-    <a href="#">Link 1</a>
-    <a href="#">Link 2</a>
-    <a href="#">Link 3</a>
-    <a href="#">Link 4</a>
+    <a href="#">Home</a>
+    <a href="#">News</a>
+    <a href="#">Profile</a>
+    <a href="#">Info</a>
   </div>
 
   <div class="main">
-    <h2>Lorum Ipsum</h2>
-    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+    <h2>XYZ Company</h2>
+    <p>Here is some information about XYZ Company.</p>
   </div>
 
   <div class="right">
     <h2>About</h2>
-    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+    <p>This is a sample responsive page.</p>
   </div>
 </div>
 
-<div style="background-color:#e5e5e5;text-align:center;padding:10px;margin-top:7px;">© copyright w3schools.com</div>
+<div style="background-color:blue;text-align:center;padding:10px;margin-top:7px;"><b>sample for responsive web page</b></div>
 
 </body>
 </html>
