--- a/FED_Exercise/status.htm
+++ b/FED_Exercise/status.htm
@@ -5,10 +5,66 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito Sans">
 <link rel="stylesheet" href="status.css" type="text/css">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <style>
 body {
 font-family: "Nunito Sans";
 background-color:#ECECEC;
+}
+
+@media only screen and (max-width: 600px) {
+  h2 {
+  font-size:15px;
+  }
+  
+  h4.proginfo-content {
+  font-size:14px;
+  }
+  span.proginfo-content {
+  font-size:21px;
+  }
+  
+  h1.referral {
+  font-size:14.5px;
+  }
+  
+  h2.container {
+  font-size:15px;
+  }
+  
+  .money {
+  font-size:16.5px;
+  }
+  
+  h1.david {
+  font-size:19px;
+  }
+  h2.david {
+  font-size:14.5px;
+  }
+  
+  h1.matt {
+  font-size:19px;
+  }
+  h2.matt {
+  font-size:14.5px;
+  }
+  
+  h1.angelina {
+  font-size:19px;
+  }
+  h2.angelina {
+  font-size:14.5px;
+  }
+  
+  h1.teamcontain {
+  font-size:19px;
+  }
+  h2.teamcontain {
+  font-size:15px;
+  }
 }
 
 </style>
