--- a/FED_Exercise/catalog.htm
+++ b/FED_Exercise/catalog.htm
@@ -4,11 +4,33 @@
 <title>Org|Catalog</title>
 <link rel="stylesheet" href="catalog.css" type="text/css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito Sans">
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <style>
 body {
 font-family: "Nunito Sans";
 background-color:white;
 }
+
+@media only screen and (max-width: 600px) {
+  h3 {
+  font-size:14.5px;
+  }
+  .newtext {
+  font-size:9px;
+  }
+  h2 {
+  font-size:14.5px;
+  }
+  h2 > span {
+  font-size:24px;
+  }
+  p > span {
+  font-size:14.5px;
+  }
+}
+
 </style>
 </head>
 <body>
