--- a/FED_Exercise/maxtor.htm
+++ b/FED_Exercise/maxtor.htm
@@ -7,6 +7,9 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito Sans">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <style>
 * {
   box-sizing: border-box;
@@ -18,7 +21,23 @@ body {
  margin:2% 2% 0 2%;
 }
 
-
+@media only screen and (max-width: 600px) {
+  h1.details {
+  font-size:14.5px;
+  }
+  .newtext {
+  font-size:9px;
+  }
+  h1.info {
+  font-size:33px;
+  }
+  h2.info {
+  font-size:28.5px;
+  }
+  del {
+  font-size:16.5px;
+  }
+}
 </style>
 </head>
 <body>
