--- a/FED_Exercise/rem_me.htm
+++ b/FED_Exercise/rem_me.htm
@@ -86,11 +86,22 @@ label {
   font-size:16px;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 600px) {
   
+  h1 {
+  font-size:18px;
+  }
+  p {
+  font-size:14.5px;
+  }
+  h2.formbox {
+  font-size:18px;
+  }
   .info, .formbox {
   width: 100%;
  }
+ 
+}
 </style>
 
 </head>
@@ -102,8 +113,8 @@ label {
 
 <div class="info">
 
-<b><h1 style= "max-width:100%; font-size:35px; font-weight:bold;"><b>WELCOME TO REDPANDA UI HTML - CSS BASIC FED TEMPLATE</b></h1>
-<p style = "font-size:16px; max-width:100%;">The Red Pandas is a team of programatic engineers who care deeply about the quality of their products and the success of their partners. Over the years, we have mastered best practices in building software products from concept to scale and we continue to learn emerging technologies. <br><br></p></b>
+<h1 style= "max-width:100%; font-size:35px; font-weight:bolder;"><b>WELCOME TO REDPANDA UI HTML - CSS BASIC FED TEMPLATE</b></h1>
+<p style = "font-size:16px; max-width:100%;">The Red Pandas is a team of programatic engineers who care deeply about the quality of their products and the success of their partners. Over the years, we have mastered best practices in building software products from concept to scale and we continue to learn emerging technologies. <br><br></p>
 
 </div>
 
